syntax = "proto3";

option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "Image.proto";
package hcmus.zingmp3.content_delivery_service;

message AudioRequest {
  File file = 1;
}

message AudioResponse {
  string id = 1;
  UploadStatus status = 2;
  string url = 3;
}

message AudioFileInfo {
  string id = 1;
  string object = 2;
  string name = 3;
  string type = 4;
  int64 size = 5;
  int64 bitrate = 6;
  string url = 7;
}

service AudioService {
  rpc getById(AudioFileInfo) returns (AudioFileInfo);
  rpc getOrCreateIfNotExists(stream AudioRequest) returns (AudioResponse);
}
